<resources>
    <string name="app_name">Calculator</string>

    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>

    <string name="total">=</string>
    <string name="clear">C</string>

    <string name="dot">.</string>
    <string name="plus_minus">+/-</string>
    <string name="btn_pow_to_2">x\u00b2</string>
    <string name="square_root">&#8730;x</string>





</resources>
